Fixed sizing for table-item on mobile

--- a/bookings/static/bookings/style.css
+++ b/bookings/static/bookings/style.css
@@ -485,4 +485,15 @@ input {
   #modal-box {
     width: 80%;
   }
+  .table-item {
+    text-align: center;
+    padding: 10px 10px;
+  }
+  .table-item h4 {
+    font-size: 18px;
+  }
+  
+  .table-item h6 {
+    font-size: 14px;
+  }
 }
